--- a/css/reset.css
+++ b/css/reset.css
@@ -283,6 +283,10 @@ textarea {
     }
 }
 
+img {
+    width: 100%;
+}
+
 ul{
     list-style: none;
     padding: 0;
@@ -295,4 +299,7 @@ h1, h2, h3, h4, h5, h6 {
     color: #000;
     font-weight: 600;
     letter-spacing: 1px;
+}
+.py-80{
+    padding:80px 0; 
 }
