--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,7 @@ Slider Area Css
     text-transform:  uppercase;
     font-weight: 700;
     line-height: 1.7;
+    color:#fff;
 }
 
 .slider-title {
@@ -202,6 +203,7 @@ Slider Area Css
     display:  inline-block;
     transition: .2s;
     background: #F4BC16;
+    text-decoration: none;
 }
 .round-btn.slider-btn{
     background:transparent;
@@ -296,6 +298,9 @@ Slider Area Css
     position: relative;
     margin-bottom: 20px;
 }
+.sec-short-discription{
+    padding-bottom: 40px;
+}
 
 .section-title:after {
     position: absolute;
@@ -310,7 +315,9 @@ Slider Area Css
 
 
 /* Service css area */
-
+.service-list {
+    overflow:  hidden;
+}
 .single-service-item {
     width: 33.33%;
     text-align:  center;
@@ -337,9 +344,336 @@ Slider Area Css
     position: absolute;
 }
 
-.servic-img {
-    margin-top: 20px;
-}
 .service-btn {
     margin: 60px auto 0;
+}
+/* Recent Project */
+
+
+
+.project-details {
+    text-align:  center;
+    position:  relative;
+    max-height: 250px;
+    z-index: 1;
+}
+
+.project-details:before {
+    content: "";
+    height: 100%;
+    width: 100%;
+    background: #000;
+    position:  absolute;
+    opacity: 0;
+    z-index: 2;
+    visibility:  hidden;
+    transition: 0.2s;
+}
+
+.project-details:hover:before {
+    visibility:  visible;
+    opacity: .3;
+}
+
+.hover-content {
+    position:  absolute;
+    top: 0%;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index:  3;
+    color: #fff;
+}
+
+.hover-content p {
+    padding-top: 40px;
+    transition:  .2s;
+    opacity:0;
+    visibility:hidden
+}
+
+.round-btn.project-btn {
+    background: transparent;
+    border: 1px solid #fff;
+    margin-top: 20px;
+    transition:  .2s;
+    opacity:0;
+    visibility:hidden
+}
+.hover-content:hover p{
+    visibility:visible;
+    opacity:1;
+    padding-top:50px;
+
+}
+.hover-content:hover .project-btn{
+    visibility:visible;
+    opacity:1;
+    margin-top:0;
+    border-color: #fff;
+    text-decoration: none;
+    color: #fff;
+}
+.round-btn.project-btn:hover{
+    background:#F4BC16;
+    border-color: transparent;
+}
+
+.our-project .container-fluid {
+    padding-right: 0;
+    padding-left: 0;
+    overflow-x: hidden;
+}
+
+.our-project .container-fluid .row div {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.project-explore h3 {
+    text-transform:  uppercase;
+    font-size: 22px;
+}
+.project-explore{
+    background:#F5F5F5;
+}
+.project-explore h3 span {
+    margin-right: 50px;
+}
+
+
+/* About Area */
+.about{
+    padding-top: 0;
+}
+
+.about-sing-pic {
+    padding: 0 30px;
+}
+.single-feature {
+    position:  relative;
+    padding-left: 100px;
+    font-size: 14px;
+    line-height: 1.7;
+    margin-bottom: 50px;
+}
+
+.single-feature:before {
+    position: absolute;
+    content: "\f13c";
+    font-family: Flaticon;
+    left:  0;
+    font-size:  50px;
+    border: 1px solid #E2E6E7;
+    height: 80px;
+    width: 80px;
+    text-align:  center;
+    color: #F4BD19;
+    border-radius: 50%;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.single-feature:nth-child(2):before {
+    content: "\f16c";
+}
+.single-feature:nth-child(3):before {
+    content: "\f123";
+}
+
+
+.single-feature:last-child{
+    margin-bottom: 0;
+}
+
+.our-feature {
+    padding: 30px 0;
+}
+
+.single-feature h4 {
+    font-size: 18px;
+    padding-bottom: 5px;
+    line-height: 28px;
+    margin-bottom: 20px;
+}
+
+
+.about-sing-pic img {
+    border-radius: 50%;
+    max-height: 480px;
+}
+
+
+
+/* our amenities */
+
+.we_offer li a {
+    height: 140px;
+    width: 180px;
+    background: #fff;
+    position:  relative;
+    color: #999;
+    text-decoration: none;
+    display: inline-block;
+    padding-top: 15%;
+}
+
+.we_offer li a i {
+    color: #F4BC16;
+    font-size: 50px;
+    text-align:  center;
+}
+
+
+section.our-amenities {
+    background: #F5F5F5;
+}
+
+.our-amenities .nav-tabs {
+    border-bottom: 0;
+}
+.tab-content {
+    max-height: 130px;
+}
+.we_offer li a.active {
+    background: #F4BC16;
+    color: #fff;
+}
+.we_offer li a.active i {
+    color: #fff;
+}
+.we_offer li{
+    margin-right: 25px;
+}
+.we_offer li a:before {
+    position: absolute;
+    bottom: -15px;
+    left: 50%;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 15px 15px 0 15px;
+    border-color: #F4BC16 transparent transparent transparent;
+    content: '';
+    transform: translateX(-50%);
+    display: none;
+}
+
+.we_offer li a.active:before {
+    display:  block;
+}
+.our-amenities .fade{
+    opacity: 1;
+}
+.we_offer{
+    margin-bottom: 30px;
+}
+
+
+/* choose area */
+
+.choose-icon {
+    position: relative;
+}
+
+.choose-icon {
+    color: #F4BC16;
+    font-size: 50px;
+    height: 140px;
+    width: 140px;
+    border: 1px solid #E2E6E7;
+    text-align: center;
+    line-height: 140px;
+    border-radius: 50%;
+    position: relative;
+    display:  inline-block;
+    margin-bottom: 25px;
+}
+
+
+.choose-icon:before {
+    position: absolute;
+    height: 20px;
+    background: #E2E6E7;
+    top: 100%;
+    width: 1px;
+    content: '';
+    left: 50%;
+}
+
+.choose-icon:after {
+    content: '';
+    height: 12px;
+    width: 12px;
+    background: transparent;
+    border: 1px solid #E2E6E7;
+    border-radius: 50%;
+    top: 114%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+/* Testimonial css */
+.single-testimonial-item p {
+    margin: 25px 0;
+}
+
+.testimonial-items {
+    text-align:  center;
+    color: #fff;
+}
+
+section.testimonial {
+    background: url(../img/image_0111.jpg);
+    background-attachment:  fixed;
+    background-size: cover;
+    background-position: top;
+    background-color:  #ddd;
+}
+
+.single-testimonial-item {
+    font-size: 21px;
+    line-height: 35px;
+    font-weight: 300;
+}
+
+.testimonial-author,.testimonial-author h4 {
+    font-size:  13px;
+    text-transform: uppercase;
+    color: #fff;
+}
+
+.testimonial-author {
+    position: relative;
+    margin-top: 40px;
+}
+
+.testimonial-author:before {
+    content: "";
+    height: 2px;
+    width: 30px;
+    background: #F4BC16;
+    position: absolute;
+    top: -15px;
+    left: 50%;
+    transform: translatex(-50%);
+}
+
+.testimonial-items .owl-nav div {
+    position:  absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
+    height: 60px;
+    width: 60px;
+    border: 1px solid #fff;
+    text-align: center;
+    font-size: 35px;
+    line-height: 60px;
+    border-radius: 50%;
+}
+
+.testimonial-items .owl-nav div.owl-next {
+    left: auto;
+    right:  0;
 }
