--- a/css/reset.css
+++ b/css/reset.css
@@ -293,12 +293,14 @@ ul{
     margin: 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    margin: 0;
-    padding: 0;
-    color: #000;
-    font-weight: 600;
-    letter-spacing: 1px;
+h1, h2, h3, h4, h5, h6
+{
+	font-family: 'Raleway';
+	margin: 0;
+	padding: 0;
+	color: #000;
+	font-weight: 600;
+	letter-spacing: 1px
 }
 .py-80{
     padding:80px 0; 
