--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+:root{
+    --bgclr:#F5F5F5;
+}
+
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800');
 
 body{
@@ -7,7 +11,7 @@ body{
 /* Header top css */
 .contact-details li {
     font-size: 13px;
-    padding: 10px 15px;
+    padding: 12px 0;
     border-right: 1px solid #E2E6E7;
 }
 
@@ -16,11 +20,12 @@ body{
     font-weight: 500;
     line-height: 20px;
     font-family: 'Raleway';
+    padding-right: 10px;
 }
 
 .contact-details li i {
     color: #999;
-    padding-right: 10px;
+    padding: 0 10px;
 }
 
 .contact-details li:first-child {
@@ -37,7 +42,7 @@ body{
 }
 
 .social-icon li {
-    padding: 10px 15px;
+    padding: 10px 12px;
     border-right: 1px solid #E2E6E7;
 }
 
@@ -94,7 +99,7 @@ form.search-form {
 
 
 
-/* Header Bootom */
+/* Header Bootom # Menu css */
 
 .navbar-brand h1 {
     color: #F5BA0B;
@@ -149,6 +154,12 @@ form.search-form {
 .main-menu li:hover .submenu {
     display:  block;
     opacity:  1;
+}
+
+/* Mobile Menu */
+
+.slicknav_menu{
+    display: none;
 }
 
 /*============ 
@@ -455,7 +466,7 @@ Slider Area Css
     padding-left: 100px;
     font-size: 14px;
     line-height: 1.7;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
 
 .single-feature:before {
@@ -493,7 +504,7 @@ Slider Area Css
     font-size: 18px;
     padding-bottom: 5px;
     line-height: 28px;
-    margin-bottom: 20px;
+
 }
 
 
@@ -589,7 +600,6 @@ section.our-amenities {
     margin-bottom: 25px;
 }
 
-
 .choose-icon:before {
     position: absolute;
     height: 20px;
@@ -661,9 +671,9 @@ section.testimonial {
 
 .testimonial-items .owl-nav div {
     position:  absolute;
-    top: 50%;
+    top: 60%;
     transform: translateY(-50%);
-    left: 0;
+    left:-10%;
     height: 60px;
     width: 60px;
     border: 1px solid #fff;
@@ -675,5 +685,202 @@ section.testimonial {
 
 .testimonial-items .owl-nav div.owl-next {
     left: auto;
-    right:  0;
+    right: -10%;
+}
+
+/* Brand Css */
+
+.brand-partner{
+    background-color: var(--bgclr);
+}
+.brand-names .owl-dots {
+    position:  absolute;
+    bottom: -40px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.brand-names .owl-dots div {
+    height: 12px;
+    width: 12px;
+    background: #E2E6E7;
+    margin: 0 5px;
+    border-radius: 50%;
+    display: inline-block;
+}
+.brand-names .owl-dots div.active{
+    background:#F4BC16;
+}
+
+.single-brand {
+    margin: 0 15px;
+}
+
+.brand-names {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+
+/* Call to action */
+
+.action-call {
+    background: #F4BC16;
+    color: #fff;
+}
+
+.single-call-action {
+    display:  flex;
+    align-items: center;
+}
+
+.contact-icon i {
+    font-size: 45px;
+    color: #F4BC16;
+    text-align: center;
+    height: 90px;
+    width: 90px;
+    line-height: 90px;
+}
+
+.contact-icon {
+    background: #fff;
+    border-radius: 50%;
+    margin-right: 30px;
+}
+
+
+/* Footer css */
+
+.footer-top{
+    background:var(--bgclr);
+}
+
+.footer-title {
+    font-weight: 300;
+    text-transform: capitalize;
+    padding-bottom: 15px;
+    position: relative;
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+
+.footer-title:after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 1px;
+    background: #E2E6E7;
+    left:  0;
+}
+
+.footer-title:before {
+    content: "";
+    height: 2px;
+    left: 0;
+    bottom:  0;
+    background: #F4BC16;
+    position: absolute;
+    z-index:  2;
+    width: 35px;
+}
+
+p {
+    font-size: 18px;
+    line-height: 24px;
+    margin-top: 24px;
+    padding: 0;
+    font-family: 'Raleway';
+}
+
+.social-icons li a {
+    height: 50px;
+    width: 50px;
+    display: flex;
+    align-items: center;
+    justify-content:  center;
+    background: #F4BC16;
+    margin-right: 1px;
+    text-decoration: none;
+    border: 2px solid #F4BC16;
+    transition: .2s;
+}
+
+.social-icons li a {
+    color: #fff;
+    font-size: 14px;
+}
+
+.social-icons li a:hover {
+    background: #fff;
+    color: #000;
+}
+
+p {}
+
+.footer-colum.service-item p {
+    margin: 10px 0 0;
+    position: relative;
+    padding-left: 30px;
+}
+
+.footer-colum.service-item p:before {
+    content: "\f00c";
+    font-family: fontAwesome;
+    color: #F4BC16;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.footer-colum span {
+    border: 2px solid #E2E6E7;
+    display: inline-block;
+    padding: 10px 12px;
+    text-transform: uppercase;
+    font-size: 12px;
+    margin: 2px;
+    font-weight: 600;
+    color: #999;
+    transition: .2s;
+    cursor: pointer;
+}
+
+.footer-colum span:hover {
+    background: #F4BC16;
+    border-color: transparent;
+    color: #fff;
+}
+
+.ftr-post {
+}
+
+.single-ftr-post {
+    display:  flex;
+    margin-bottom: 20px;
+}
+
+.single-ftr-post img {
+    height: 90px;
+    width: 90px;
+    margin-right: 25px;
+}
+
+.footer-colum {
+    color: #999;
+}
+
+.ftr-post-info h4 a {
+    font-size: 14px;
+    font-weight: 400;
+    color: #444;
+    line-height: 28px;
+}
+.ftr-post-info p{
+    font-size: 12px;
+    margin: 0;
+}
+.coyrig-text span {
+    color: #999;
 }
